# MyGAMES101

./: .gitignore  CMakeLists.txt  vcpkg.json
00/: CMakeLists.txt  main.cpp
01/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.hpp
02/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
03/: CMakeLists.txt  Shader.hpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
